kubernetes/applications/readeck/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: readeck
  namespace: apps
spec:
  selector:
    matchLabels:
      app: "readeck"
  serviceName: "readeck"
  replicas: 1
  template:
    metadata:
      labels:
        app: readeck
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: readeck
          image: codeberg.org/readeck/readeck:0.16.0
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
              ephemeral-storage: 8Gi
            limits:
              memory: 1Gi
              cpu: 500m
              ephemeral-storage: 8Gi
          ports:
            - containerPort: 8000
              name: web
          volumeMounts:
            - name: readeck-data
              mountPath: /readeck
  volumeClaimTemplates:
    - metadata:
        name: readeck-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "longhorn"
        resources:
          requests:
            storage: 32Gi
