kubernetes/applications/readeck/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readeck-svc
  namespace: apps
  labels:
    app: readeck
spec:
  ports:
    - port: 8000
      name: web
  selector:
    app: readeck
