kubernetes/applications/readeck/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readeck-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.org/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_set_header  X-Real-IP         $remote_addr;
      proxy_set_header  Host              $host;
      proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
      proxy_set_header  X-Forwarded-Proto $scheme;
      proxy_redirect off;
      proxy_buffering off;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &dnsHost readeck.mcmumf.dev
      secretName: readeck-cert
  rules:
    - host: *dnsHost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: readeck-svc
                port:
                  number: 8000
